# k2-network

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  Dockerfile.auth  Dockerfile.backend  Dockerfile.frontend  JUNE_21_SUMMARY.md  MIGRATION.md  README.md  TAURI_INTEGRATION.md  docker-compose.yml  nginx.conf  nginx.frontend.conf  out  skills-lock.json
.cargo/: config.toml
.claude/: settings.json
docs/: DEPLOY.md  MATCHING_AND_NEGOTIATION.md  TECHNICAL_DOCS.md  database-design.md  k2-app-web.md  p2p-direct-messaging.md  user-guide.md
k2-app/: index.html  package-lock.json  package.json  vite.config.ts
k2-app-tauri/: dev.sh  package-lock.json  package.json
k2-app-tauri/src/: App.css  App.tsx
k2-app-tauri/src-tauri/: Cargo.toml  tauri.conf.json
k2-app-tauri/src-tauri/capabilities/: default.json  mobile.json
k2-app-tauri/src-tauri/src/: lib.rs
k2-app-tauri/src/components/: index.ts
k2-app-tauri/src/components/Chat/: ChatInterface.css  ChatInterface.tsx  StartTransactionButton.css  StartTransactionButton.tsx
k2-app-tauri/src/components/DynamicForm/: CandidateCard.css  CandidateCard.tsx  CandidateList.css  CandidateList.tsx  DiscoveryView.css  DiscoveryView.tsx  DynamicForm.css  DynamicRequestForm.tsx  MarketplaceTabs.tsx  NegotiationDashboard.css  NegotiationDashboard.tsx  SkeletonField.tsx  index.ts  types.ts
k2-app-tauri/src/components/Header/: Header.css  Header.tsx
k2-app-tauri/src/hooks/: useGroqChat.ts
k2-app-tauri/src/pages/: index.ts
k2-app-tauri/src/pages/Contact/: Contact.css  Contact.tsx
k2-app-tauri/src/pages/Marketplace/: Marketplace.css  Marketplace.tsx
k2-app-tauri/src/pages/Negotiation/: Negotiation.tsx  NegotiationChat.css  NegotiationChat.tsx  index.ts
k2-app-tauri/src/pages/Profile/: Profile.css  Profile.tsx  ProfileViewer.tsx
k2-app-tauri/src/pages/Sync/: SyncPage.css  SyncPage.tsx
k2-app-tauri/src/services/: groqStructuredOutput.ts
k2-app-tauri/src/tambo/: components.tsx  config.ts  index.ts  tools.ts
k2-app-web/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
k2-app-web/src/: App.css  App.tsx  main.tsx
k2-app-web/src/api/: ai.ts  chat.ts  client.ts  contacts.ts  files.ts  friendRequests.ts  index.ts  marketplace.ts  node.ts  tracker.ts  ws.ts
k2-app-web/src/components/Chat/: ChatInterface.css  ChatInterface.tsx
k2-app-web/src/components/DynamicForm/: CandidateCard.css  CandidateCard.tsx  CandidateList.css  CandidateList.tsx  DiscoveryView.css  DiscoveryView.tsx  DynamicForm.css  DynamicRequestForm.tsx  FindMatchingView.tsx  MarketplaceTabs.tsx  NegotiationDashboard.css  NegotiationDashboard.tsx  index.ts  types.ts
k2-app-web/src/components/Header/: Header.css  Header.tsx
k2-app-web/src/components/LegacyViews/: LegacyViews.tsx
k2-app-web/src/components/Sidebar/: Sidebar.css  Sidebar.tsx
k2-app-web/src/components/SubtopicDashboard/: SubtopicDashboard.css  SubtopicDashboard.tsx
k2-app-web/src/components/ThemeSwitcher/: ThemeSwitcher.css  ThemeSwitcher.tsx
k2-app-web/src/context/: AuthContext.tsx  NotificationContext.tsx  ThemeContext.tsx
k2-app-web/src/hooks/: useGroqChat.ts
k2-app-web/src/pages/: index.ts
k2-app-web/src/pages/Auth/: AuthGate.css  AuthGate.tsx
k2-app-web/src/pages/Contact/: Contact.css  Contact.tsx  index.ts
k2-app-web/src/pages/Marketplace/: Marketplace.css  Marketplace.tsx
k2-app-web/src/pages/Negotiation/: Negotiation.tsx  NegotiationChat.css  NegotiationChat.tsx
k2-app-web/src/pages/Profile/: Profile.css  Profile.tsx
k2-app-web/src/tambo/: tools.ts
k2-app-web/src/types/: index.ts
k2-app/figma/: marketplace.yaml
k2-app/src/: styles.css
k2-app/src-tauri/: Cargo.toml  tauri.conf.json
k2-app/src-tauri/src/: lib.rs  main.rs
k2-app/src/components/: index.ts
k2-app/src/components/Chat/: ChatInterface.css  StartTransactionButton.css  StartTransactionButton.tsx
k2-app/src/components/DynamicForm/: CandidateCard.css  CandidateCard.tsx  DiscoveryView.css  DynamicForm.css  types.ts
k2-app/src/components/Header/: Header.tsx
k2-app/src/components/LegacyViews/: LegacyViews.tsx  index.ts
k2-app/src/components/Sidebar/: Sidebar.css  (+1 more)
k2-app/src/hooks/: useGroqChat.ts
k2-app/src/pages/: index.ts
k2-app/src/tambo/: components.tsx  tools.ts
k2-app/src/types/: index.ts
k2-auth-server/: Cargo.toml
k2-auth-server/src/: main.rs
k2-core/: Cargo.toml
k2-core/src/: blobs.rs  docs.rs  identity.rs  lib.rs  lib_tests.rs  profile.rs  sync.rs
k2-core/src/agent_loop/: checkpoint.rs  error.rs  executor.rs  mod.rs  outcome.rs  stages.rs  state.rs
k2-core/src/approval/: error.rs  gate.rs  lease.rs  mod.rs  request.rs  resolver.rs
k2-core/src/capabilities/: context.rs  error.rs  mod.rs  registry.rs  tool.rs
k2-core/src/llm/: error.rs  fallback.rs  groq.rs  mod.rs  ollama.rs  openai_compat.rs  provider.rs  registry.rs
k2-core/src/p2p_security/: mod.rs
k2-core/src/security/: error.rs  invalidation.rs  mod.rs  policy.rs  trust.rs
k2-core/src/store/: approval.rs  checkpoint.rs  error.rs  migrations.rs  mod.rs  sqlite.rs
k2-core/src/tools/: file_read.rs  file_write.rs  http_get.rs  mod.rs  shell_exec.rs
k2-core/src/wasm/: error.rs  host.rs  limits.rs  mod.rs  plugin.rs  runtime.rs
k2-docs/: architecture.mdx  cli-commands.mdx  deployment.mdx  development.mdx  docs.json  introduction.mdx  migration-iroh-1.0.mdx
k2-docs/.wrangler/cache/: pages.json  wrangler-account.json
k2-web-server/: Cargo.toml
k2-web-server/src/: main.rs  state.rs
k2-web-server/src/middleware/: auth.rs
k2-web-server/src/routes/: ai.rs  auth.rs  chat.rs  contacts.rs  files.rs  friend_requests.rs  marketplace.rs  mod.rs  node.rs  qr.rs  tracker.rs
k2-web-server/src/ws/: event_bus.rs  mod.rs
llm-wiki/raw/k2/: 2026-04-23-node-id-generation-analysis.md  2026-06-21-agent-loop-implementation.md
llm-wiki/wiki/k2/: agent-loop-roadmap.md  node-id.md  node-initialization.md
scripts/: init.sql  migrate_add_contacts_friend_requests.sql
tests/: integration_tests.rs  lib.rs
(+11 files in other folders)
