[package]
name = "k2-auth-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "k2-auth-server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7" }
tower-http = { version = "0.5", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.15"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "macros"] }
chrono = { version = "0.4", features = ["serde"] }
