[package]
name = "k2-core"
version = "0.2.0"
edition = "2021"

[dependencies]
iroh = { version = "0.95.0", features = ["discovery-pkarr-dht"] }
iroh-base = "0.95"
iroh-blobs = "0.97"
iroh-gossip = "0.95.0"
iroh-docs = "0.95.0"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["compat"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
postcard = { version = "1", features = ["alloc"] }
futures = "0.3"
bytes = "1"
rand = "0.9"
blake3 = "1"
hex = "0.4"
iroh-content-discovery = { path = "../../iroh-test-space/iroh-content-discovery" }



