[package]
name = "k2-app-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "k2_app_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["test"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# K2 P2P Core
k2-core = { path = "../../k2-core", features = ["content-discovery"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
iroh-gossip = "0.101"
futures-util = "0.3"

# HTTP client for API calls (no CORS in backend)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
urlencoding = "2"

# QR Code generation
qrcode = "0.14"
base64 = "0.22"
image = { version = "0.25", features = ["png"] }

tauri-plugin-android-fs = "24.1.0"

# Mobile-only dependencies
[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-barcode-scanner = "2"

# Desktop-only dependencies
[target.'cfg(not(target_os = "android"))'.dependencies]
directories = "6.0"
